/*
 * $Id$
 */

2010-03-30 13:47 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     * added members on wxhHBValidator:
       + actionBlock : contains block to evaluate when data is changed in ctrl
       + warningBlock : contains block to evaluate for a non valid data in ctrl
       + warningMessage : contains string to show on warning
     % simplified calling wxhHBValidator:Validate to use ::EvalWarnBlock

  *  src/wxbase/baseclasses/wx_Window.cpp
  *  src/wxbase/baseclasses/wxhWindow.prg
     * calling the c++ Validate msg

  *  src/wxbase/validators/wx_Validator.cpp
  *  src/wxbase/validators/wxhValidator.prg
     ! Fixed very stupid bug that was calling the ctrl and not the Validator Validate msg
     * removed c++ HB msg's

2010-03-30 11:10 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxh.h
     * minor code formatting

  *  samples/choice/choice.prg
     * removed unneeded define and added item to hash value

2010-03-30 06:51 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/choice/choice.prg
     % enhanced sample to show usage of hash types

  *  src/common/wxhfuncs.prg
     ! Fixed checking for a differ valtype on old/new values

2010-03-30 06:32 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/choice/choice.prg
     % showing capability to use either of numeric value or string value to
       use on CHOICE ctrls

2010-03-30 06:30 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/choice/choice.prg
     % enhanced sample to show final values of CHOICE ctrls

2010-03-30 06:19 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxharbour.ch
     * on @ PUSHVALIDATOR now is requiered to give a explicit code block for the
       warning block to evaluate ( as almost all else controls )

  *  src/common/wxhfuncs.prg
     % using picture clause on wxTextCtrl's when showing value, when editing the